// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`util/fs/index > readLocalDirectory > returns dir content > three files 1`] = `
[
  "Cargo.lock",
  "Cargo.toml",
  "subdir",
]
`;

exports[`util/fs/index > readLocalDirectory > returns dir content > two files 1`] = `
[
  "Cargo.lock",
  "Cargo.toml",
]
`;
